oauth2-proxy/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy-ingressroute
  namespace: oauth2-proxy
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.pindaroli.org`)
      kind: Rule
      services:
        - name: oauth2-proxy
          port: 4180
  tls:
    secretName: pindaroli-wildcard-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy-redirect
  namespace: oauth2-proxy
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`auth.pindaroli.org`)
      kind: Rule
      services:
        - name: oauth2-proxy
          port: 4180
      middlewares:
        - name: redirect-to-https
          namespace: wetty
